--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>3-column preview card component</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+        <link rel="stylesheet" href="./css/styles.css" />
+    </head>
+    <body>
+        <main class="card">
+            <div class="card-item sedans">
+                <img src="./images/icon-sedans.svg" alt="Sedans Icon" class="item-icon" />
+                <h1 class="item-title">Sedans</h1>
+                <p class="item-paragraph">
+                    Choose a sedan for its affordability and excellent fuel economy. Ideal for
+                    cruising in the city or on your next road trip.
+                </p>
+                <a href="#" class="item-cta">Learn More</a>
+            </div>
+            <div class="card-item suvs">
+                <img src="./images/icon-suvs.svg" alt="SUVs Icon" class="item-icon" />
+                <h1 class="item-title">SUVs</h1>
+                <p class="item-paragraph">
+                    Take an SUV for its spacious interior, power, and versatility. Perfect for your
+                    next family vacation and off-road adventures.
+                </p>
+                <a href="#" class="item-cta">Learn More</a>
+            </div>
+            <div class="card-item luxury">
+                <img src="./images/icon-luxury.svg" alt="Luxury Icon" class="item-icon" />
+                <h1 class="item-title">Luxury</h1>
+                <p class="item-paragraph">
+                    Cruise in the best car brands without the bloated prices. Enjoy the enhanced
+                    comfort of a luxury rental and arrive in style.
+                </p>
+                <a href="#" class="item-cta">Learn More</a>
+            </div>
+        </main>
+    </body>
 </html>
+
